--- a/jupyter/Assignment-Home.ipynb
+++ b/jupyter/Assignment-Home.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because of deadlines and a monstrous perfectionism, we were not be able to implement some fancy features we would so like to: an interactive website where user can type in a genre, movie or actor and get the full analysis in return. We also didn't train a set of classifiers to predict things - we looked at Kaggle competitions and did notice an almost zero classifier performance for the most of attributes, hence we ignored this step. We decided to dig into the analysis deeper though. It is all about quality, not quantity, right?"
+    "Because of deadlines and a monstrous perfectionism, we were not be able to implement some fancy features we would so like to: an interactive website where user can type in a genre, movie or actor and get the full analysis in return. We decided to dig into the analysis deeper though. It is all about quality, not quantity, right?"
    ]
   },
   {
